//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  name String [not null]
  email String [not null]
  password String [not null]
  address Address
  books Book [not null]
  editorId Int
  editor User
  author User
  publishers User [not null]
  authors User [not null]
}

Table Address {
  id Int [pk, increment]
  country String [not null]
  city String [not null]
  street String [not null]
  user User [not null]
  userId Int [not null]
}

Table Book {
  id Int [pk, increment]
  title String [not null]
  description String [not null]
  author User [not null]
  authorId Int [not null]
  categories Category [not null]
}

Table Category {
  id Int [pk, increment]
  name String [not null]
  books Book [not null]
  parentCategoryId Int
  parentCategory Category
  subCategories Category [not null]
}

Table AuthorPublisher {
  publishersId Int [ref: > User.id]
  authorsId Int [ref: > User.id]
}

Table BookToCategory {
  categoriesId Int [ref: > Category.id]
  booksId Int [ref: > Book.id]
}

Ref: User.editorId - User.id

Ref: Address.userId - User.id

Ref: Book.authorId > User.id

Ref: Category.parentCategoryId - Category.id